--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "scripts": {
     "dev": "vite serve site",
     "build": "vite build",
+    "build:site": "vite build site",
     "style": "tailwindcss build -o tailwind.css"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "clipboard": "^2.0.10",
+    "nprogress": "^0.2.0",
+    "prettier": "^2.6.2",
+    "vue": "^3.0.4",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
@@ -17,6 +22,7 @@
     "postcss": "^8.4.12",
     "sass": "^1.49.11",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.9.1"
+    "vite": "^2.9.1",
+    "vite-plugin-md": "^0.12.4"
   }
 }
